create tables: users and contacts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=Lucas-Jia-Contact-Book-Backend
+
+
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/lucas_jia_contact_book?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=lucasjia
+spring.datasource.password=lucasjia
+
+spring.jpa.hibernate.ddl-auto=update
+# print sql in console
+spring.jpa.show-sql=true
+# better readability for sql
+spring.jpa.properties.hibernate.format_sql=true
